apps/applications/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: n8n
  sessionAffinity: None
  type: ClusterIP
